Empty search prevented

--- a/docs/resources/introduction.mdx
+++ b/docs/resources/introduction.mdx
@@ -27,3 +27,4 @@ You can use all the [react-typeahead](https://github.com/fmoo/react-typeahead), 
 * Allows user to render custom tag(token) Component or the tag(token) Item.
 * Allows user to update Options(props) at runtime.
 * Allows user to set date with time (hh mm ss)
+* Allows user to search without any category & operator (Free text search) for maximum of one search term
