Click on selected token to edit functional

--- a/docs/resources/props.mdx
+++ b/docs/resources/props.mdx
@@ -150,7 +150,7 @@ import "react-structured-query-search-suggestions/dist/index.css";
 	/>
 </Playground>
 
-## clickToToggleOperator
+## clickToEditToken
 
 <Playground>
 	<ReactStructuredQuerySearch
@@ -164,7 +164,7 @@ import "react-structured-query-search-suggestions/dist/index.css";
 			}
 		]}
 		onTokenAdd={val => console.log(val)}
-		clickToToggleOperator={true}
+		clickToEditToken={true}
 	/>
 </Playground>
 
